--- a/WS03_CSS_Advance/styles/style.css
+++ b/WS03_CSS_Advance/styles/style.css
@@ -58,3 +58,75 @@ p {
     input[type="submit"]:hover {
       background-color: #45a049;
     }
+
+    .transition-button {
+        background-color: lightblue;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+      
+      .transition-button:hover {
+        background-color: rgb(96, 241, 91);
+      }
+
+      .animation-box {
+        width: 50px;
+        height: 50px;
+        background-color: rgb(77, 240, 77);
+        position: relative;
+        animation: move 2s infinite alternate;
+      }
+      
+      @keyframes move {
+        from {
+          left: 0;
+        }
+        to {
+          left: 100px;
+        }
+      }
+
+      .pseudo-list li:nth-child(odd) {
+        background-color: rgb(247, 33, 33);
+      }
+      
+      .pseudo-list li:nth-child(even) {
+        background-color: rgb(101, 248, 71);
+      }
+
+      .filter-image {
+        filter: grayscale(100%);
+        transition: filter 0.3s ease;
+      }
+      
+      .filter-image:hover {
+        filter: grayscale(0%);
+      }
+
+      .quote {
+        position: relative;
+        left: -35px;
+        top: -12px;
+        padding-left: 25px;
+        font-style: italic;
+      }
+      
+      .quote::before {
+        content: '“';
+        font-size: 40px;
+        position: absolute;
+        left: 0;
+        top: -10px;
+        color: rgb(24, 23, 23);
+      }
+
+      .quote::after {
+        content: "”";
+        font-size: 40px;
+        position: absolute;
+        left: 95;
+        top: -10px;
+        color: rgb(24, 23, 23);
+      }
